# EECS498598-W26-ZKP

projects/p1/src/: curve.rs  lib.rs  poly.rs  zq.rs
projects/p1/tests/: poly_test.proptest-regressions  poly_test.rs
projects/p2/: Cargo.toml
projects/p2/src/: combined.rs  delphian.rs  ec.rs  ip.rs  lib.rs  quokka.rs  sparsemat.rs  sumcheck.rs  trivial_poly_comm.rs
projects/p2/src/comms/: Cargo.toml
projects/p2/src/comms/src/: lib.rs  transcript.rs
projects/p2/tests/: delphian_large_tests.proptest-regressions  delphian_large_tests.rs  delphian_tests.rs  quokka_tests.rs  sumcheck_tests.rs
projects/p2/tests/common/: mod.rs
