[package]
name = "p2"
version = "0.1.0"
edition = "2024"

[dependencies]
p1 = {path = "../p1"}
itertools = "0.14"
tokio = {version = "1.46", features=["full"]}
comms = {path = "./src/comms"}
anyhow = { version = "1.0.98", features = ["backtrace"] }
rand = "0.9.2"

[dev-dependencies]
proptest = { version = "1.9.0", features = ["attr-macro"] }
sfs-bigint = {git = "https://github.com/cmlsharp/sfs-bigint"}
